@@ -108,12 +108,19 @@ Geometric
         resid 80 and creates a sphere of radius 6.0 around the COG.                
     cylayer *innerRadius* *externalRadius* *zMax* *zMin* *selection*
         selects all atoms within a cylindric layer centered in the center of geometry (COG) of a given selection, 
-        e.g. ``cylayer 5 10 10 -10 protein`` selects the center of geometry of protein, 
-        and creates a cylindrical layer of inner radius 5, external radius 10, maximum z value 10 and minimum z value -10 around the COG.
+        e.g. ``cylayer 5 10 10 -8 protein`` selects the center of geometry of protein, 
+        and creates a cylindrical layer of inner radius 5, external radius 10 centered on the COG. In z, the cylinder
+        extends from 10 above the COG to 8 below. Positive values for *zMin*, or negative ones for *zMax*,
+        are allowed.
     cyzone *externalRadius* *zMax* *zMin* *selection*                       
         selects all atoms within a cylindric zone centered in the center of geometry (COG) of a given selection,
         e.g. ``cyzone 15 4 -8 protein and resid 42`` selects the center of geometry of protein and resid 42, 
-        and creates a cylinder of external radius 15, maximum z value 4 and minimum z value -8 around the COG.
+        and creates a cylinder of external radius 15 centered on the COG. In z, the cylinder
+        extends from 4 above the COG to 8 below. Positive values for *zMin*, or negative ones for *zMax*,
+        are allowed.
+    .. versionchanged:: 0.10.0
+       keywords *cyzone* and *cylayer* now take *zMax* and *zMin* to be relative to the COG of
+       *selection*, instead of absolute z-values in the box.
     point *x* *y* *z*  *distance* 
         selects all atoms within a cutoff of a point in space, make sure
         coordinate is separated by spaces, e.g. ``point 5.0 5.0 5.0  3.5`` selects
